tests/invalid/non_const_array_size.lang
proc "c" main() void {
    var size: i32 = 1;
    var array: [size]i32;
}
